--- a/4/index.html
+++ b/4/index.html
@@ -543,7 +543,7 @@
   <div class="inner">
     <h1 class="footer-title">Machine Learning Medium</h1>
     <h2 class="footer-description">Mathematics, Machine Learning, Natural Language Processing Etc.</h2>
-    <a href=/ class="btn">Home</a>
+    <a href=/about/ class="btn">About Me</a>
   </div>
 </div>
 
