add noindex meta tag for soft 404

--- a/404.html
+++ b/404.html
@@ -8,6 +8,12 @@
   <!-- (1) force latest IE rendering engine: bit.ly/1c8EiC9 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+  
+  <!-- implement noindex to prevent search engine crawl: https://support.google.com/webmasters/answer/93710?hl=en -->
+  <meta name="robots" content="noindex">
+  <meta name="googlebot" content="noindex">
+  
+
   <title>404: Page not found | Machine Learning Medium</title>
   <meta name="description" content="Mathematics, Machine Learning, Natural Language Processing Etc." />
 
