change title autopages collection

--- a/collection/basics-of-machine-learning/2/index.html
+++ b/collection/basics-of-machine-learning/2/index.html
@@ -140,7 +140,7 @@
 
 <main class="content" role="main">
 
-    <h5 class="index-headline normal"><span>basics-of-machine-learning Series</span></h5>
+    <h5 class="index-headline normal"><span>Series: basics-of-machine-learning</span></h5>
     <div class="cf frame column-fit">
 
       
