--- a/collection/what-is-mathematics/index.html
+++ b/collection/what-is-mathematics/index.html
@@ -140,7 +140,7 @@
 
 <main class="content" role="main">
 
-    <h5 class="index-headline normal"><span>what-is-mathematics Series</span></h5>
+    <h5 class="index-headline normal"><span>Series: what-is-mathematics</span></h5>
     <div class="cf frame column-fit">
 
       
