ADD: next and previous post buttons

--- a/6/index.html
+++ b/6/index.html
@@ -10,7 +10,7 @@
 
   
 
-  <title>Machine Learning Medium - Page 6 | Machine Learning Medium</title>
+  <title>Home - Page 6 | Machine Learning Medium</title>
   <meta name="description" content="A step away from the illusion of knowledge." />
 
   <meta name="HandheldFriendly" content="True" />
@@ -20,7 +20,7 @@
   
   
   <meta property="og:site_name" content="Machine Learning Medium" />
-  <meta property="og:title" content="Machine Learning Medium - Page 6"/>
+  <meta property="og:title" content="Home - Page 6"/>
   
   <meta property="og:description" content="A step away from the illusion of knowledge." />
   
